# ptdata

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst  license.rst  readme.rst  references.bib
ptdata/: __init__.py  nist_sp966.json  pt.py
ptdata/crc_75/: boiling-point-name.csv  boiling-point-number.csv  heat-capacity-mass-name.csv  heat-capacity-mass-number.csv  heat-capacity-molar-name.csv  heat-capacity-molar-number.csv  melting-point-name.csv  melting-point-number.csv
ptdata/data/nist-sp-966/: atomic_masses  ec  ionization_energies
ptdata/nist_sp966/: ec.csv  ec_aufbau.csv  electron_configurations_aufbau  generate.py  ionization.csv  mass.csv  names.csv  symbols.csv
tests/: test_pt_nist_sp966.py
